pod.yml
apiVersion: V1
kind: Pod 
metadata: 
   name: sample-pod


spec: 
  - containers:
      image: httpd
      containerPort: 80 

#### This is sample pod configuration file for the saving purpose
