service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service  # Name of the service
  labels:
    app: my-app     # Label selector for the service
spec:
  selector:
    app: my-app     # Labels from the pod that this service should route to
  ports:
    - protocol: TCP
      port: 80      # Port exposed by the service
      targetPort: 8080  # Port where the application is running inside the pod
  type: ClusterIP   # Type of service, options: ClusterIP, NodePort, LoadBalancer
